--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -7,13 +7,21 @@
     <title>teste de imagem de fundo</title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center; 
             background-repeat: no-repeat;
-            background-size: cover;   
+            background-size: cover;  
+            background-attachment: fixed;*/
+
+            /*Shorthand diminuir linhas de codigos - background > color > image > position  > repeat > [size] > attackment
+            */
+
+            background: black url(imagens/wallpaper002.jpg)  center center  no-repeat fixed;
+            background-size: cover;
         }
+        
         main{
             background-color: white;
             width: 400px;
@@ -21,14 +29,21 @@
             padding: 10px;
             border-radius: 15px;
             border: solid blue;
-            text-align: center;
+            text-align: justify;   
         }
     </style>
 </head>
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo aperiam inventore eos tempora officia eveniet nam ullam labore consequatur quas. Totam tempora fugiat dignissimos magni eius autem corporis nam sit!Lorem ipsum dolor </p>
     </main>
 </body>
 </html>
