--- a/Exercicios/ex001/index.html
+++ b/Exercicios/ex001/index.html
@@ -9,7 +9,8 @@
 <body>
      <h1>olá, mundo!</h1>
      <hr>
-    <p>Esse e meu primeiro documento HTML! estou muito feliz</p>
+    <p>Esse e meu primeiro documento HTML! estou muito feliz!</p>
     <p>Meus primeiros passos criando um site!</p>
+    <a href="../ex000/index.html" target="_self">Voltar para a pagina principal.</a>
 </body>
 </html>
