--- a/Exercicios/ex002/index.html
+++ b/Exercicios/ex002/index.html
@@ -30,5 +30,6 @@
         &#x270c;
         &#x1F913;
       </p>
+      <a href="../ex000/index.html" target="_self">Voltar para pagina inicial.</a>
 </body>
 </html>
