--- a/Exercicios/ex003/index.html
+++ b/Exercicios/ex003/index.html
@@ -10,12 +10,14 @@
     <h1>testando carga e imagens</h1>
 
     <p>Abaixo voce vai ver uma imagem que esta na mesma pasta</p>
-
     <img src="luffy-full250.png" alt="Imagem do luffy"> 
 
     <p>podemos tambem carregar imagens que estao em sub-pastas</p>
     <img src="Imagens/one-piece-logo-ful250.png" alt="logo-one-piece">
+
     <p>tambem podemos carregar imagens externar da web</p>
     <img src="https://bognarjunior.files.wordpress.com/2018/01/1crcyaithv7aiqh1z93v99q.png" alt="logo java script URL">
+    <p><a href="../ex000/index.html" target="_self">Voltar para pagina principal.</a></p>
+    
 </body>
 </html>
