--- a/Exercicios/ex004/index.html
+++ b/Exercicios/ex004/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="nerd.ico" type="image/x-icon">
-    <title>Teste de favecon com o icon de luffy</title>
-
+    <link rel="shortcut icon" href="one-piece.ico" type="image/x-icon">
+    <title>Teste de favicon com o icon do luffy</title>
 </head>
 <body>
     <h1>Olha o favicon aqui em cima</h1>
-    
+    <p><a href="../ex000/index.html">Voltar para a pagina principal.</a></p>
 </body>
 </html>
