--- a/Exercicios/ex006/index.html
+++ b/Exercicios/ex006/index.html
@@ -24,6 +24,8 @@
     <h3>2.1 Os instrumentos de gestão</h3><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia accusantium quibusdam recusandae quasi alias eos. Sint obcaecati veniam, nam voluptatibus vitae error dolores unde nisi corrupti, asperiores, minima totam. Voluptatem.</p>
     <h4>2.1.2 Os instrumentos de planejamento territorial</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere nulla labore dolorum et tempore enim, consectetur modi deserunt dicta dolor officiis aut corrupti adipisci non recusandae. Perferendis quos dicta distinctio?</p>
     <h4>2.1.3 Os regimes territoriais</h4><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum possimus minima modi hic quisquam quaerat architecto natus vitae qui, odit quidem voluptatibus quasi voluptatum nihil accusamus adipisci error facilis assumenda.</p>
+    <p><a href="../ex000/index.html">Voltar para a pagina inicial</a></p>
+    
     
 
 
