--- a/Exercicios/ex007/html4.html
+++ b/Exercicios/ex007/html4.html
@@ -5,5 +5,6 @@
     <body bgcolor="blue">
         Eu moro na <u>Rua dos Capixabas, 229 - Botafogo - RJ</u>
         <marquee behavior="" direction="right">Teste de Marquee</marquee>
+        <p><a href="../ex000/index.html">Voltar pagina principal</a></p>
     </body>
 </html>
