--- a/Exercicios/ex007/html5.html
+++ b/Exercicios/ex007/html5.html
@@ -6,13 +6,16 @@
     <title>Exemplo de Semântica</title>
     <style>
         body {
-            background-color: #8080da ;
+            background-color: #9c9cf3 ;
         }
     </style>
 </head>
 <body>
     <p>
         Eu moro na <address>Rua dos Capixabas, 229 - Botafogo - RJ</address>
+    </p>
+    <p>
+        <a href="../ex000/index.html">VOltar pagina principal</a>
     </p>
 </body>
 </html>
