--- a/Exercicios/ex008/index.html
+++ b/Exercicios/ex008/index.html
@@ -14,7 +14,7 @@
 <p>Nessa frase temos um <b>Termo em negrito</b> Usando a tag B (Não semantica).</p>
 <p>Nesta frase, tenho um <strong> termo em destaque</strong> usando a tag STRONG (semantica).</p>
 <h2>italico / enfase</h2>
-<p>Nesta frase, temos um <i>termo em italico</i>Usando a tag I (Nao semantico)</p>
+<p>Nesta frase, temos um <i>termo em italico</i> Usando a tag I (Nao semantico)</p>
 <p>Nesta frase, temos um <em>termo em enfase</em> usando a TAG EM (semantica)</p>
 <h2>Texto marcado</h2>
 <p>Podemos criar tambem <MARK style="background-color: aqua;"> um texto marcado </MARK>Usando a tag MARK.
@@ -24,11 +24,12 @@
     <h2>texto deletado</h2>
     <p>podemos marcar <DEL>um texto excluido</DEL> para indicar que ele nao deve ser lido ou exluido usando a tag DEL </p>
     <h2>texto inserido</h2>
-    <p>Podemos <ins>marcar um texto</ins> e mostrar que ele foi marcado com a tag INSS </p>
+    <p>Podemos <ins>marcar um texto</ins> e mostrar que ele foi marcado com a tag INS </p>
     <h2>texto sobrescrito</h2>
     <p>Para inserir coisas do tipo x<sup>45</sup>+3 a usa a tag SUP </p>
     <h2>texto subrescrito</h2>
     <p>para inserir coisas do tipo H<sub>2</sub>O usa a tag sub </p>
+    <p><a href="../ex000/index.html" target="_self">Voltar para pagina principal</a></p>
 <body>
     
 </body>
