--- a/Exercicios/ex008b/index.html
+++ b/Exercicios/ex008b/index.html
@@ -33,7 +33,7 @@
     <h2>texto invertido</h2>
     <p><bdo dir="rtl">Estou aprendendo a criar textos invertidos.</bdo></p>
 
-
+<p><a href="../ex000/index.html">Voltar para pagina principal</a></p>
 
 </head>
 <body>
