--- a/Exercicios/ex009/index.html
+++ b/Exercicios/ex009/index.html
@@ -35,25 +35,26 @@
 
 <H2>games/consoles Fav</H2>
 <ol>
-<li>NES</li>
+<li>SNES</li>
   <ul type="circle">
-    <li>Mario</li>  
-    <li>donkey kong</li>
-    <ul>
-        <li>mario bros 3</li>
-        <li>Mario: Lost Levels </li>
-
-    </ul>  
+<li>Mario</li>  
+<li>donkey kong</li>
+<li>super metroid</li>
+<li>chrono trigger</li>     
   </ul>
-<li>PlayStation</li>
+<li>PlayStation 2</li>
   <ul type="circle">
     <li>God Hand</li>
-    <li>naruto</li>
+    <li>naruto ultimate 5</li>
+    <li>Down hill domination</li>
+    <li>SSX on Tour</li>
   </ul>
-<li>X-box</li>
+<li>X-box 360</li>
   <ul type="circle">
      <li>Halo</li>
-     <li>Naturo S4</li>
+     <li>Wizard of war</li>
+     <li>conker bad for day</li>
+     <li>Fallout 4</li>
   </ul type="circle">
 </ol>
 <h2>Lista de definiçoes</h2>
@@ -67,6 +68,7 @@
     <dd>Linguagem de programação para a criação e interatividade de um site</dd>
     </dd>
 </d1>
+<p><a href="../ex000/index.html" target="_self">voltar para pagina principal</a></p>
 
        
   
