--- a/Exercicios/ex010/index.html
+++ b/Exercicios/ex010/index.html
@@ -17,7 +17,9 @@
 
     <h1>Links para Downloads</h1>
     <ul>
-        <li>Link para <a href="pdf/grammar_guide.pdf" type="application/pdf">dowload PDF</a></li>
+        <li>
+            Link para <a href="pdf/grammar_guide.pdf" type="application/pdf">dowload PDF</a></li>
     </ul>
+    <P><a href="../ex000/index.html">Voltar para pagina principal</a></P>
 </body>
 </html>
