--- a/Exercicios/ex000/index.html
+++ b/Exercicios/ex000/index.html
@@ -10,19 +10,20 @@
 <body>
     <h1>Conteudo de todos os exercicios</h1>
     <ul>
-        <li><a href="../ex001/index.html" target="_self">Exercicio 001/ Olá, mundo!</a></li>
-        <li><a href="../ex002/index.html" target="_self">Exercicio 002/ Paragrafos e quebras de linha</a></li> 
-        <li><a href="../ex003/index.html" target="_self">Exercicio 003/ Colocando imagens e redimensionando</a></li>
-        <li><a href="../ex004/index.html" target="_self">Exercicio 004/ Colocando favicon no site</a></li>
-        <a href="#"><li>Exercicio 005/ Não existe</li></a>
-        <li><a href="../ex006/index.html">Exercicio 006/ Hierarquia de titulos h1-h6</a></li>
-        <li><a href="../ex007/html4.html">Exercicio 007a/ html4</a>
-        <li><a href="../ex007/html5.html">Exercicio 007b/ html5
-        <li><a href="../ex008/index.html">Exercicio 008/ Principais formataçoes de textos</a></li>
-        <li><a href="../ex008b/index.html">Exercicio 008b/ outras formataçoes</a></li>
-        <li><a href="../ex009/index.html">Exercicio 009/ Trabalhando com listas de tarefas </a></li>
-        <li><a href="../ex010/index.html">Exercicio 010/ Usando Links externos</a></li>
-
+            <li><a href="../ex001/index.html" target="_self" class="image">Exercicio 001/ Olá, mundo!</a></li>
+            <li><a href="../ex002/index.html" target="_self">Exercicio 002/ Paragrafos e quebras de linha</a></li>
+            <li><a href="../ex003/index.html" target="_self">Exercicio 003/ Colocando imagens e redimensionando</a></li>
+            <li><a href="../ex004/index.html" target="_self">Exercicio 004/ Colocando favicon no site</a></li>
+            <a href="#"><li>Exercicio 005/ Não existe</li></a>
+            <li><a href="../ex006/index.html">Exercicio 006/ Hierarquia de titulos h1-h6</a></li>
+            <li><a href="../ex007/html4.html">Exercicio 007a/ html4</a>
+            <li><a href="../ex007/html5.html">Exercicio 007b/ html5
+            <li><a href="../ex008/index.html">Exercicio 008/ Principais formataçoes de textos</a></li>
+            <li><a href="../ex008b/index.html">Exercicio 008b/ outras formataçoes</a></li>
+            <li><a href="../ex009/index.html">Exercicio 009/ Trabalhando com listas de tarefas </a></li>
+            <li><a href="../ex010/index.html">Exercicio 010/ Usando Links externos</a></li>
+            <li><a href="../ex011/index.html">Exercicio 011/ Midias em HTML5</a></li>
+            
 <p>lembrar de colocar</p>
     </ul>
 
