--- a/Exercicios/ex011/index.html
+++ b/Exercicios/ex011/index.html
@@ -19,6 +19,8 @@
     <P>Vamos colocar alguns audios na pagina</P>
     <audio src="media/Song1.mp3"controls play></audio><br>
     <audio src="media/song2.mp3" controls play></audio>
+    <P><a href="../ex000/index.html">Voltar para pagina principal</a></P>
+
 
 </body>
 </html>
